[tool.poetry]
name = "transmission"
version = "1.0.0"
description = "A Django REST API built to proxy Ethereum requests via ShipChain Engine."

license = "Apache-2.0"

authors = [
    "Adam Hodges <ahodges@shipchain.io>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/ShipChain/transmission"
homepage = "https://transmission.shipchain.io"

keywords = ['transmission', 'shipchain', 'logistics']

[tool.poetry.dependencies]
python = "==3.6.8"

asn1crypto = "==0.24.0"
aws-requests-auth = "~0.4"
boto3 = "~1.9"
bpython = "==0.17.1"
celery = "==4.2.1"
celery_once = "==2.0.0"
channels = "~2.1"
channels-redis = "~2.3.3"
cryptography = "~2.5"
django = "==2.2.4"
django-cors-headers = "==2.2.0"
django-dotenv = "==1.4.2"
django-enumfields = "==0.10.0"
django-environ = "==0.4.5"
django-extensions = "==2.0.6"
django-fieldsignals = "~0.4"
django-filter = "~2.1"
django-fsm = "~2.6.1"
django-fullurl= "==0.5"
django-influxdb-tagged-metrics = '==1.3.3'
django-redis = "==4.10.0"
django-simple-history = "~2.7.0"
djangorestframework = "==3.9.1"
djangorestframework-gis = "==0.14"
djangorestframework-jsonapi = "~2.5"
djangorestframework-simplejwt = {git = "git://github.com/ShipChain/django-rest-framework-simplejwt.git", rev = "f47065b7e0cf3adf8e4095796cfc13f651a117c6"}
geocoder = "==1.38.1"
geojson = "==2.4.0"
inflection = ">=0.3.1"
influxdb = "==5.0.0"
logstash_formatter = "~0.5"
mapbox = "==0.16.2"
pyjwt = "~1.7"
psycopg2 = ">=2.5.4"
python-jose = "~3.0"
pyyaml = ">=4.2b4"
redis = "~3.2"
requests = "~2.21"
shipchain-common = "~1.0.2"
uwsgi = "~2.0.17"
watchdog = "~0.9"
whitenoise = "~4.1"
watchtower = "==0.5.5"


[tool.poetry.dev-dependencies]
bandit = "~1.5"
coverage = "==4.5.1"
django-mock-queries = "~2.1"
fpdf = "==1.7.2"
freezegun = "~0.3"
httpretty = "==0.9.5"
minio = "==4.0.6"
mock = "==2.0.0"
moto = "^1.3.10"
pillow = "~5.4"
prospector = "==1.1.6.2"
pyexcel = "~0.5"
pyexcel-xls = "~0.5"
pyexcel-xlsx = "~0.5"
pylint-celery = "~0.3"
pylint-django = "~2.0"
pytest-asyncio = "~0.10"
pytest-cov = "~2.6"
pytest-django = "~3.4"
pytest-mock = "^1.10"
responses = "==0.9.0"
safety = "^1.8"
websocket-client = "==0.53.0"
