[tool.poetry]
name = "transmission"
version = "1.0.0"
description = "A Django REST API built to proxy Ethereum requests via ShipChain Engine."

license = "Apache-2.0"

authors = [
    "Adam Hodges <ahodges@shipchain.io>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/ShipChain/transmission"
homepage = "https://transmission.shipchain.io"

keywords = ['transmission', 'shipchain', 'logistics']

[tool.poetry.dependencies]
python = "==3.6.9"

asn1crypto = "==0.24.0"
aws-requests-auth = "~0.4"
boto3 = "~1.9"
bpython = "==0.17.1"
celery = "==4.4.6"
celery_once = "==2.0.1"
channels = "~2.4.0"
channels-redis = "~2.4.1"
cryptography = "~2.5"
django = "==3.0.8"
django-admin-rangefilter = "~0.5"
django-cors-headers = "==3.4.0"
django-dotenv = "==1.4.2"
django-enumfields = "==2.0.0"
django-environ = "==0.4.5"
django-extensions = "==2.1.4"
django-fancy-cache = "~1.0"
django-fieldsignals = "~0.5"
django-filter = "~2.4"
django-fsm = "~2.7.0"
django-fullurl= "==0.5"
django-influxdb-tagged-metrics = '==1.3.3'
django-redis = "==4.12.1"
django-rest-serializer-field-permissions = {git = "git://github.com/ajhodges/django-rest-serializer-field-permissions.git", rev = "faced3f0d12dea5ac1829ae27f6f58d4ef40b131"}
django-simple-history = "~2.8.0"
djangorestframework = "==3.10.3"  # 3.11.0 breaks UniqueTogetherValidator, fix should be in 3.12.0
djangorestframework-gis = "==0.15"
djangorestframework-jsonapi = "~3.0"
djangorestframework-simplejwt = {git = "git://github.com/davesque/django-rest-framework-simplejwt.git", rev = "04a4f7f2e045ac4a49542b7e98350e66431adcf5"}
inflection = ">=0.3.1"
influxdb = "==5.0.0"
logstash_formatter = "~0.5"
psycopg2 = ">=2.5.4"
pyjwt = "~1.7"
python-jose = "~3.0"
pyyaml = ">=4.2b4"
redis = "~3.3"
requests = "~2.24"
shipchain-common = {git = "git://github.com/shipchain/python-common.git", rev = "c60ff21690d0e25b628fe18b7cc4c11cf18484d7"}
uwsgi = "~2.0.17"
watchdog = "~0.9"
whitenoise = "~4.1"
watchtower = "==0.5.5"


[tool.poetry.dev-dependencies]
asynctest = "~0.13"
bandit = "~1.6"
coverage = "==4.5.1"
django-mock-queries = "~2.1"
django-pycharm-breakpoint = "~0.2.0"
fakeredis = "~1.4.3"
fpdf = "==1.7.2"
freezegun = "~0.3"
geojson = "~2.5"
lupa = "~=1.9"
minio = "==4.0.6"
mock = "==2.0.0"
moto = "==1.3.14"
pillow = "~7"
prospector = {git = "git://github.com/shipchain/prospector.git", rev = "72e9b88a604217584d227282d2e484de1482efca"}
pyexcel = "~0.5"
pyexcel-xls = "~0.5"
pyexcel-xlsx = "~0.5"
pyrasite = {git = "git://github.com/diamond-lizard/pyrasite.git", rev = "d1e2301fe60ab03e99a51ca1b105f7c3368b1a33"}
pytest-asyncio = "~0.14"
pytest-cov = "~2.6"
pytest-django = "~3.5"
pytest-mock = "^1.10"
responses = "~0.12"
safety = "^1.8"
websocket-client = "==0.53.0"
